@startuml 05_building_blocks
title server/src — Building Block View (UML, representative blocks)

skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultTextAlignment center
skinparam nodesep 25
skinparam ranksep 45
left to right direction

package "HTTP" {
  [create-app + routes] as App
  [controllers\n(auth, talent, mandate, candidacy,\nplacement, document, match, match-ai,\nllm, usage, members, account, ...)] as Ctrl
  [problem mapper\n(RFC 9457)] as Problem
  [security\n(CORS, headers, CSP)] as Security
  [api-docs\n(OpenAPI + Swagger UI)] as Docs
}

package "Application (services)" {
  [LlmFeatureRunner\n(provider resolve, generate + meter,\nschema-validate, fallback signal,\ngrounding envelope)] as Runner
  [AI feature services\n(document-assist, cv-parse, ats-ai,\noutreach-ai, match-ai) +\nDocumentAiService facade] as AiSvc
  [recruiting services\n(talent, mandate, candidacy,\nplacement, match, forecast,\nretention, members, usage)] as RecSvc
  [auth services\n(auth, password reset,\nemail verification, account\n+ personal-data registry)] as AuthSvc
  [LlmService\n(provider registry + default)] as LlmSvc
}

package "Domain (pure, no I/O)" {
  [recruiting model\n(talent, mandate, candidacy,\nplacement, user, usage)] as Model
  [AI domain\n(prompts + fallbacks + schemas,\ngrounding, skill-semantics/-taxonomy,\ncompany-archetype, candidate-prep,\nlanguage, agg-check)] as AiDomain
  [errors] as DomainErrors
}

package "Ports" {
  interface "repositories\n(user, talent, mandate, candidacy,\nplacement, documents, observations)" as Repos
  interface LlmProvider
  interface "ApiKeyStore /\nUsageMeter" as Keys
  interface "AuthEngine / Mailer" as AuthPorts
  interface "PdfRenderer / PdfMerger /\nPdfTextExtractor" as PdfPorts
  interface JobSource
}

package "Adapters" {
  [fs-* (default)\nsql/* (Postgres)] as StoreAdapters
  [AnthropicLlmProvider\nGeminiLlmProvider] as LlmAdapters
  [Better-Auth engine (SQLite) - secret cipher\nSMTP/console mailer] as AuthAdapters
  [Puppeteer renderer - pdf-lib merger\npdfjs text extractor] as PdfAdapters
  [arbeitnow - bundesagentur - adzuna\n+ offline sample (composite)] as JobAdapters
}

[container — Awilix\ncomposition root] as Container

App --> Ctrl
App ..> Security
App ..> Docs
Ctrl ..> Problem
Ctrl --> AiSvc
Ctrl --> RecSvc
Ctrl --> AuthSvc
AiSvc --> Runner
Runner --> LlmSvc
Runner --> Keys
AiSvc --> AiDomain
RecSvc --> Model
AuthSvc --> AuthPorts
AiSvc --> Repos
RecSvc --> Repos
AuthSvc --> Repos
RecSvc ..> DomainErrors
AiSvc --> PdfPorts
RecSvc --> JobSource
LlmSvc --> LlmProvider

StoreAdapters ..|> Repos
LlmAdapters ..|> LlmProvider
AuthAdapters ..|> AuthPorts
PdfAdapters ..|> PdfPorts
JobAdapters ..|> JobSource

Container ..> StoreAdapters
Container ..> LlmAdapters
Container ..> App

@enduml
